--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.5",
-    "expo": "^49.0.13",
+    "expo": "~48.0.6",
     "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "lodash": "^4.17.21",
@@ -22,7 +22,7 @@
     "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-animatable": "^1.3.3",
     "react-native-feather": "^1.1.2",
     "react-native-heroicons": "^3.2.0",
@@ -30,8 +30,8 @@
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-snap-carousel": "^1.3.1",
-    "react-native-star-rating": "^1.0.8",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^13.4.0",
     "tailwindcss": "^3.2.7"
   },
