working on using custom fonts

--- a/app.json
+++ b/app.json
@@ -15,6 +15,11 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "fonts": [
+      {
+        "horror-type": "./assets/fonts/HorrorType.ttf"
+      }
+    ],
     "ios": {
       "supportsTablet": true,
       "jsEngine": "jsc"
