--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^13.4.0",
     "tailwindcss": "^3.2.7",
-    "expo-font": "~11.1.1"
+    "expo-font": "~11.1.1",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
